# stateful_mcp

./: .env.example  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: a13c734a356a_create_tasks_table.py
src/stateful_mcp/: config.py  database.py  main.py  models.py
src/stateful_mcp/tools/: add_task.py  list_tasks.py  mark_complete.py
