[project]
name = "stateful-mcp"
version = "0.1.0"
description = "A stateful MCP server with PostgreSQL-backed task management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "mcp[cli]>=1.26.0",
    "psycopg-pool>=3.3.0",
    "psycopg[async,binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stateful_mcp"]

[tool.uv]
package = true